# dependabot-pyproject

./: LICENSE  pyproject.toml
.github/: dependabot.yml
