[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "dependabot-pyproject"
version = "0.1.dev0"
description = "A simple pyproject.toml file for testing dependabot"
license = "MIT"
authors = ["ANSYS, Inc. <ansys.support@ansys.com>"]
dependencies = [
    "ansys-templates==0.3.0",
]

[project.optional-dependencies]
plotting = [
    "matplotlib==3.5.1",
    "pyvista==0.35.1",
]
qt = [
    "pyside==1.2.4",
]
