[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pkgtest"
authors = [{name = "Ansys", email = "pyansys.support@ansys.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "ansys-templates==0.3.0",
]

[project.optional-dependencies]
plotting = [
    "matplotlib==3.5.1",
    "pyvista==0.38.3"
]
